--- a/expat/lib/Makefile.am
+++ b/expat/lib/Makefile.am
@@ -79,6 +79,7 @@ EXTRA_DIST = \
     siphash.h \
     utf8tab.h \
     winconfig.h \
+    xcsinc.c \
     xmlrole.h \
     xmltok.h \
     xmltok_impl.c \
